--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,12 @@
   transform: scale(1.1, 1.1);
   transition: all 0.5s ease-out;
 }
+
+/*------------cart----------------*/
+.cart-input {
+  width: 50px;
+  height: 30px;
+}
 /* ----------------media screen-------------------- */
 @media screen and (max-width: 500px) {
   .card-width {
