add styles to details component

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,12 @@
   width: 50px;
   height: 30px;
 }
+/* --------------details---------------------*/
+
+.details-banner {
+  width: 80%;
+  height: 350px;
+}
 /* ----------------media screen-------------------- */
 @media screen and (max-width: 500px) {
   .card-width {
