--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  max-width: 100%;
 }
 
 /*---------------loaing----------------*/
@@ -68,6 +69,7 @@
 /* filter bar */
 .filter-bar {
   box-shadow: 0px 0px 7px 0px black;
+  max-width: 100vw;
 }
 .search-input {
   border: 1px solid rgb(157, 157, 157);
@@ -82,6 +84,10 @@
   background-color: rgb(208, 208, 208);
   color: black;
   padding: 8px;
+}
+.products-page {
+  max-width: 100vw;
+  margin: 0;
 }
 /* ----------------media screen-------------------- */
 @media screen and (max-width: 500px) {
@@ -112,5 +118,11 @@
   }
   .col-category {
     margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .card-width {
+    width: 130px;
   }
 }
