--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@
 }
 .products-page {
   max-width: 100vw;
-  margin: 0;
+  display: flex;
 }
 /* ----------------media screen-------------------- */
 @media screen and (max-width: 500px) {
@@ -104,7 +104,7 @@
     margin-right: 5px;
   }
   .nav-title {
-    font-size: 20px;
+    font-size: 18px;
   }
   /* -------------products------------- */
   .products-category {
@@ -124,5 +124,8 @@
 @media screen and (max-width: 400px) {
   .card-width {
     width: 130px;
+  }
+  .products-banner {
+    height: 160px;
   }
 }
